# google-test-c-example

./: CMakeLists.txt  README.md  main.c
app_lib/: CMakeLists.txt  vec2.c  vec2.h
app_tests/: CMakeLists.txt  app_lib_tests.cpp
googletest/: .travis.yml  BUILD.bazel  CMakeLists.txt  README.md
googletest/googlemock/: CMakeLists.txt  README.md
googletest/googlemock/cmake/: gmock.pc.in  gmock_main.pc.in
googletest/googlemock/docs/: CheatSheet.md
googletest/googlemock/src/: gmock-spec-builders.cc  gmock.cc
googletest/googlemock/test/: gmock-actions_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-internal-utils_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-spec-builders_test.cc  gmock_link_test.h  gmock_stress_test.cc
googletest/googletest/: CMakeLists.txt  Makefile.am  README.md
googletest/googletest/cmake/: internal_utils.cmake
googletest/googletest/docs/: advanced.md  faq.md  primer.md
googletest/googletest/samples/: sample10_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample7_unittest.cc  sample8_unittest.cc
googletest/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest-typed-test.cc  gtest.cc
googletest/googletest/test/: BUILD.bazel  googletest-catch-exceptions-test_.cc  googletest-death-test-test.cc  googletest-filepath-test.cc  googletest-linked-ptr-test.cc  googletest-listener-test.cc  googletest-options-test.cc  gtest_all_test.cc  (+12 more)
(+20 files in other folders)
